"""Bazel BUILD file for ARM Cortex-M Microcontroller Examples.

This package defines board support and hardware abstraction layer
(HAL) binaries for microcontrollers. Because this code targets ARM
Cortex-M microcontrollers and not the host OS:

1. The raw `rust_binary` targets are constrained using
   `target_compatible_with` to run only on `os:none` to prevent
   compilation errors during wildcard host builds.
"""

load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "board_support",
    srcs = glob(["src/bin/**/*.rs"]),
    crate_root = "src/bin/board_support.rs",
    edition = "2024",
    rustc_flags = [
        "-C",
        "linker=rust-lld",
        "-C",
        "link-arg=-Tlink.x",
    ],
    target_compatible_with = ["@platforms//os:none"],
    deps = [
        "@bare_metal_microcontrollers//:cortex-m-rt",
        "@bare_metal_microcontrollers//:embedded-hal",
        "@bare_metal_microcontrollers//:microbit-v2",
        "@bare_metal_microcontrollers//:nrf52833-hal",
        "@bare_metal_microcontrollers//:nrf52833-pac",
        "@bare_metal_microcontrollers//:panic-halt",
    ],
)

rust_binary(
    name = "hal",
    srcs = glob(["src/bin/**/*.rs"]),
    crate_root = "src/bin/hal.rs",
    edition = "2024",
    rustc_flags = [
        "-C",
        "linker=rust-lld",
        "-C",
        "link-arg=-Tlink.x",
    ],
    target_compatible_with = ["@platforms//os:none"],
    deps = [
        "@bare_metal_microcontrollers//:cortex-m-rt",
        "@bare_metal_microcontrollers//:embedded-hal",
        "@bare_metal_microcontrollers//:microbit-v2",
        "@bare_metal_microcontrollers//:nrf52833-hal",
        "@bare_metal_microcontrollers//:nrf52833-pac",
        "@bare_metal_microcontrollers//:panic-halt",
    ],
)

rust_binary(
    name = "minimal",
    srcs = glob(["src/bin/**/*.rs"]),
    crate_root = "src/bin/minimal.rs",
    edition = "2024",
    rustc_flags = [
        "-C",
        "linker=rust-lld",
        "-C",
        "link-arg=-Tlink.x",
    ],
    target_compatible_with = ["@platforms//os:none"],
    deps = [
        "@bare_metal_microcontrollers//:cortex-m-rt",
        "@bare_metal_microcontrollers//:embedded-hal",
        "@bare_metal_microcontrollers//:microbit-v2",
        "@bare_metal_microcontrollers//:nrf52833-hal",
        "@bare_metal_microcontrollers//:nrf52833-pac",
        "@bare_metal_microcontrollers//:panic-halt",
    ],
)

rust_binary(
    name = "mmio",
    srcs = glob(["src/bin/**/*.rs"]),
    crate_root = "src/bin/mmio.rs",
    edition = "2024",
    rustc_flags = [
        "-C",
        "linker=rust-lld",
        "-C",
        "link-arg=-Tlink.x",
    ],
    target_compatible_with = ["@platforms//os:none"],
    deps = [
        "@bare_metal_microcontrollers//:cortex-m-rt",
        "@bare_metal_microcontrollers//:embedded-hal",
        "@bare_metal_microcontrollers//:microbit-v2",
        "@bare_metal_microcontrollers//:nrf52833-hal",
        "@bare_metal_microcontrollers//:nrf52833-pac",
        "@bare_metal_microcontrollers//:panic-halt",
    ],
)

rust_binary(
    name = "pac",
    srcs = glob(["src/bin/**/*.rs"]),
    crate_root = "src/bin/pac.rs",
    edition = "2024",
    rustc_flags = [
        "-C",
        "linker=rust-lld",
        "-C",
        "link-arg=-Tlink.x",
    ],
    target_compatible_with = ["@platforms//os:none"],
    deps = [
        "@bare_metal_microcontrollers//:cortex-m-rt",
        "@bare_metal_microcontrollers//:embedded-hal",
        "@bare_metal_microcontrollers//:microbit-v2",
        "@bare_metal_microcontrollers//:nrf52833-hal",
        "@bare_metal_microcontrollers//:nrf52833-pac",
        "@bare_metal_microcontrollers//:panic-halt",
    ],
)

rust_binary(
    name = "typestate",
    srcs = glob(["src/bin/**/*.rs"]),
    crate_root = "src/bin/typestate.rs",
    edition = "2024",
    rustc_flags = [
        "-C",
        "linker=rust-lld",
        "-C",
        "link-arg=-Tlink.x",
    ],
    target_compatible_with = ["@platforms//os:none"],
    deps = [
        "@bare_metal_microcontrollers//:cortex-m-rt",
        "@bare_metal_microcontrollers//:embedded-hal",
        "@bare_metal_microcontrollers//:microbit-v2",
        "@bare_metal_microcontrollers//:nrf52833-hal",
        "@bare_metal_microcontrollers//:nrf52833-pac",
        "@bare_metal_microcontrollers//:panic-halt",
    ],
)
