[package]
name = "chat-async"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.4.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-websockets = { version = "0.13.0", features = ["client", "fastrand", "server", "sha1_smol"] }
